# comfyui-x2hdr

./: .gitignore  README.md  README_zh.md  __init__.py  grading.py  hdr_utils.py  ideogram4_x2hdr_comfyui_implementation_plan.md  nodes.py  pyproject.toml  routes.py  x2hdr_comfyui_implementation_plan.md
examples/: ideogram4_x2hdr_text2image.json  x2hdr_text2image.json
tests/: auto_exposure_smoke.py  cache_smoke.py  decode_l_peak_smoke.py  dynamic_range_qa_smoke.py  logc_decode_smoke.py  preset_qa.py
web/: x2hdr_viewer.js
