[project]
name = "comfyui-x2hdr-ideogram4"
version = "0.1.0"
description = "ComfyUI nodes for Ideogram4 X2HDR PU21 decode, EXR export, tone-map previews, color grading, and metrics."
requires-python = ">=3.10"
dependencies = [
  "av",
  "numpy",
  "opencv-python",
  "torch",
]

[tool.black]
line-length = 100
