[project]
name = "comfyui-x2hdr"
version = "0.1.0"
description = "ComfyUI nodes for PU21/LogC HDR decode, EXR export, tone-map previews, color grading, and metrics."
requires-python = ">=3.10"
dependencies = [
  "av",
]

[project.optional-dependencies]
opencv-fallback = [
  "opencv-python",
]

[tool.black]
line-length = 100
